@@ -11,6 +11,11 @@ he tries to master the French Horn.
 <p>
 
 <li>Graham Percival, documentation editor
+<p>
+Graham is currently studying viola at the University of Victoria,
+Canada, despite playing viola for two years and cello for twenty.
+When he's not buried in academic work or LilyPond doc work, he
+composes tonal music.
 
 <li>Pedro Kroeger, Build meister
 <p>
