@@ -1,3 +1,7 @@
+2004-10-30  Graham Percival  <gperlist@shaw.ca>
+
+	* site/about/thanks.html: added bio.
+
 2004-10-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/devel/packaging.html (href): Update Cygwin description.
